# geant4_claude

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
agents/: geant4-runner.md
commands/: geant4-analyze.md  geant4-build.md  geant4-detector.md  geant4-example.md  geant4-init.md  geant4-preview.md  geant4-run.md  geant4-validate.md
docs/: DESIGN.md  _config.yml  index.md  report_cherenkov.html
docs/_layouts/: default.html  home.html  page.html
docs/assets/css/: style.css
docs/superpowers/plans/: 2026-05-17-optical-photon-support.md  2026-05-18-review-findings-burndown.md
docs/superpowers/specs/: 2026-05-17-optical-photon-support-design.md
hooks/: hooks.json  install-deps.sh
scripts/: preview_gdml.py
scripts/validators/: cherenkov.py
skills/geant4/: SKILL.md
skills/geant4-analysis/: SKILL.md
skills/geant4-geometry/: SKILL.md
skills/geant4-physics-list/: SKILL.md
src/: CMakeLists.txt
templates/example/analysis/: example.py
templates/example/geometries/: example.gdml
templates/example/macros/: run.mac
templates/example/src/: geant4_claude_main.cc
templates/preview/: CMakeLists.txt  main.cc
templates/validate/: CMakeLists.txt  main.cc
templates/workspace/: .gitignore  CLAUDE.md  embed_html.py  log.md  report.html  result.md
templates/workspace/analysis/: example.py
tests/: CLEAN-INSTALL-CHECKLIST.md  clean-install-test.sh  clean-smoke.sh  exit-capture-test.sh  g4run-unit-test.sh  phase-b-drive.sh
tests/fixtures/optical/: CMakeLists.txt  main.cc  radiator.gdml  run.mac
wiki/: CLAUDE.md  README.md  index.md  log.md
wiki/raw/pdg-reviews/: rpp2025-rev-passage-particles-matter.txt
wiki/sources/geant4-code/examples/: g4-example-advanced-cats.md  g4-example-advanced-composite-calorimeter.md  g4-example-advanced-dna.md  g4-example-advanced-hadrontherapy.md  g4-example-advanced-hgcal-testbeam.md  (+33 more)
wiki/sources/physics/: passage-particles-matter-summary.md  passage-particles-matter.md  pdg-api-access.md
wiki/synthesis/: passage-particles-matter-geant4-mapping.md
(+23 files in other folders)
